--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,41 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Build output
+build/
+dist/
+out/
+.vscode/
+.DS_Store
+
+# Coverage directory used by testing tools
+coverage/
+
+# Dependency directories
+node_modules/
+
+# Temporary files
+*.tmp
+*.swp
+*.swo
+
+# IDE specific files
+.idea/
+.vscode/
+*.sublime-workspace
+
+# Other
+*.log
+*.lock
